Feat/89 selective team event (#91)
* chore(event): split service logics into common packages & chore datetimeUtil #86

* fix(event): use queryService in getTeamEvents #86

* chore(event): introduce first-class collection #86

* chore(event): remove zonedDateTime in recurringEventService #86

* feat(event): implement eventCommandService #86

* chore(event): use eventCommandService in personalEventService #86

* chore(event): use eventCommandService in teamEventService #86

* fix(event): add save recurrenceRule logic #86

* feat(event): implement SingleEventList #89

* apply first-class collections in event service layer #89

* chore(event): remove eventState field in event #89

* chore(event): update check calendar range in make & modify event in personalEventService #89

* chore(test): update event test code #89

* chore(event): apply list.copyof in first-class collections #89