@@ -6,6 +6,8 @@ import org.springframework.transaction.annotation.Transactional;
 import unischedule.events.domain.Event;
 import unischedule.events.domain.EventOverride;
 import unischedule.events.domain.collection.EventOverrideList;
+import unischedule.events.domain.collection.ExpandedRecurringEvents;
+import unischedule.events.domain.collection.RecurringEventList;
 import unischedule.events.dto.EventServiceDto;
 import unischedule.events.service.internal.RecurringEventRawService;
 import unischedule.events.util.RRuleParser;
@@ -13,6 +15,7 @@ import unischedule.events.util.RRuleParser;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -22,27 +25,27 @@ public class RecurringEventService {
     private final RecurringEventRawService recurringEventRawService;
     private final RRuleParser rruleParser;
 
-    private final static Boolean fromRecurring = true;
-
     @Transactional(readOnly = true)
     public List<EventServiceDto> expandRecurringEvents(List<Long> calendarIds, LocalDateTime startAt, LocalDateTime endAt) {
-        List<Event> recurringEvents = recurringEventRawService.findRecurringSchedule(calendarIds, endAt);
+        RecurringEventList recurringEvents = recurringEventRawService.findRecurringSchedule(calendarIds, endAt);
 
-        List<EventServiceDto> expandedEventList = new ArrayList<>();
-
-        Map<Long, List<EventOverride>> exceptionsMap = recurringEventRawService.getEventOverrideMap(recurringEvents, startAt, endAt);
-
-        for (Event recurEvent : recurringEvents) {
-            List<Event> expandedEvent = expandRecurringEvent(recurEvent, startAt, endAt);
-            EventOverrideList overrideList = new EventOverrideList(exceptionsMap.getOrDefault(recurEvent.getEventId(), List.of()));
-
-            overrideList.applyEventOverrides(expandedEvent)
-                    .stream()
-                    .map(event -> EventServiceDto.fromRecurringEvent(event, fromRecurring, recurEvent))
-                    .forEach(expandedEventList::add);
+        if (recurringEvents.isEmpty()) {
+            return Collections.emptyList();
         }
 
-        return expandedEventList;
+        List<EventServiceDto> finalExpandedEventList = new ArrayList<>();
+
+        Map<Long, List<EventOverride>> exceptionsMap = recurringEventRawService.getEventOverrideMap(recurringEvents.getEvents(), startAt, endAt);
+
+        for (Event recurEvent : recurringEvents.getEvents()) {
+            List<Event> expandedEvent = expandRecurringEvent(recurEvent, startAt, endAt);
+            ExpandedRecurringEvents expandedRecurringEvents = new ExpandedRecurringEvents(expandedEvent, recurEvent);
+            EventOverrideList overrideList = new EventOverrideList(exceptionsMap.getOrDefault(recurEvent.getEventId(), List.of()));
+
+            finalExpandedEventList.addAll(expandedRecurringEvents.applyOverridesToDtos(overrideList));
+        }
+
+        return finalExpandedEventList;
     }
 
     private List<Event> expandRecurringEvent(Event recEvent, LocalDateTime startAt, LocalDateTime endAt) {
@@ -61,7 +64,6 @@ public class RecurringEventService {
                         .startAt(eventStart)
                         .endAt(eventStart.plus(duration))
                         .isPrivate(recEvent.getIsPrivate())
-                        .state(recEvent.getState())
                         .build())
                 .toList();
     }
